--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -63,7 +63,7 @@ jobs:
             --name redactify-web-cpu \
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
             --server ${{ env.REGISTRY }} \
-            --username ${{ secrets.GHCR_USERNAME }} \
+            --username ${{ github.actor }} \
             --password ${{ secrets.GHCR_TOKEN }}
 
       - name: Deploy Web Container App
