--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -63,7 +63,7 @@ jobs:
             --name redactify-web-cpu \
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
             --environment ${{ env.AZURE_CONTAINER_APP_ENV }} \
-            --image ghcr.io/nishikantmandal007/redactify-web-cpu:latest \
+            --image ${{ env.REGISTRY }}/nishikantmandal007/redactify-web-cpu:latest \
             --target-port 5000 \
             --ingress external \
             --min-replicas 1 \
@@ -81,7 +81,7 @@ jobs:
             --name redactify-celery-cpu \
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
             --environment ${{ env.AZURE_CONTAINER_APP_ENV }} \
-            --image ghcr.io/nishikantmandal007/redactify-celery-cpu:latest \
+            --image ${{ env.REGISTRY }}/nishikantmandal007/redactify-celery-cpu:latest \
             --min-replicas 1 \
             --max-replicas 2 \
             --cpu 1.0 \
